--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
 		<!-- HEADER AND TODO COUNT -->
 		<div class="jumbotron text-center">
-			<h1>I'm a Todo-aholic</h1>
+			<h1>Texas has the greatest rodeo in the world!</h1>
 		</div>
 
 		<!-- TODO LIST -->
