update post and delete

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 	<script src="js/controllers/main.js"></script> <!-- load up our controller -->
 	<script src="js/services/todos.js"></script> <!-- load our todo service -->
 	<script src="js/core.js"></script> <!-- load our main application -->
+<link rel="shortcut icon" type="image/png" href="http://example.com/favicon.png" />
 
 </head>
 <!-- SET THE CONTROLLER -->
